# OOP-A2-GameApplication

./: .gitignore  A2_25_20230447_SheetPb01.cpp  A2_S25_20230447_SheetPb04.cpp  CMakeLists.txt  Docs.md  FxF_Board.cpp  FxF_Board.h  FxF_Gameplay.h  FxF_Player.cpp  FxF_Player.h  FxF_Random.cpp  FxF_Random.h  ITTT_Board.cpp  ITTT_Board.h  ITTT_Gameplay.h  ITTT_Player.cpp  ITTT_Player.h  ITTT_Random.cpp  ITTT_Random.h  UML_Diagram.drawio  issues.cpp  main.cpp  train_ai.cpp
5x5/: FxF_Board.cpp  FxF_Board.h  FxF_Gameplay.h  FxF_Random.cpp  FxF_Random.h
AI/: Connect4Agent.cpp  Connect4Agent.h  Network.h  ReplayBuffer.h
Core/: Board.cpp  Board.h  GameManager.cpp  GameManager.h  GameState.h  Gameplay.cpp  Gameplay.h  Player.cpp  Player.h  RandomPlayer.cpp  RandomPlayer.h
FivexFive Tic-Tac-Toe/: FxF_Board.cpp  FxF_Board.h  FxF_Gameplay.h  FxF_Player.cpp  FxF_Player.h
Four-in-row/: Board_Four_In_Row.cpp  Board_Four_In_Row.h  C4_Board.cpp  C4_Board.h  C4_Gameplay.h  C4_Player.h  C4_Random.cpp  C4_Random.h  C4_ai.cpp  C4_ai.h
Games/Four-in-row/: C4_Gameplay.h  C4_Player.cpp  C4_Random.cpp  C4_ai.cpp
Games/Numerical Tic-Tac-Toe/: NTTT_Gameplay.h
Games/Pyramic Tic Tac Toe/: PTTT_Random.cpp
Games/SUS/: SUS_Board.cpp  SUS_Gameplay.h  SUS_GuiHandler.cpp  SUS_GuiHandler.h  SUS_Random.h
Games/Ultimate Tic-Tac-Toe/: UTTT_Board.cpp  UTTT_Random.h
Inverse Tic-Tac-Toe/: ITTT_Board.cpp  ITTT_Player.cpp
Numerical Tic-Tac-Toe/: Gameplay.cpp  NTTT_Board.cpp  NTTT_Board.h  NTTT_Gameplay.h  NTTT_Player.cpp  NTTT_Player.h  NTTT_Random.cpp  NTTT_Random.h  NumericalTTT.cpp  NumericalTTT.h
Pyramic Tic Tac Toe/: Board_PTTT.cpp  Board_PTTT.h  PTTT_Board.cpp  PTTT_Board.h  PTTT_Gameplay.h  PTTT_Player.cpp  PTTT_Player.h  PTTT_Random.cpp  PTTT_Random.h
Pyramic Tic-Tac-Toe/: PTTT_Board.cpp  PTTT_Board.h
SUS/: SUS_Board.cpp  SUS_Board.h  SUS_Gameplay.h  SUS_Player.cpp  SUS_Player.h  SUS_Random.cpp
Tic-Tac-Toe/: TTT.cpp  TTT.h
Ultimate Tic-Tac-Toe/: UTTT_Board.cpp  UTTT_Board.h  UTTT_Gameplay.h  UTTT_Player.cpp  UTTT_Player.h  UTTT_Random.cpp
Utils/: GUI.cpp  GUI.h  GameTheory.cpp  GameTheory.h  GuiManager.cpp  GuiManager.h  RAII.h
Word Tic-Tac-Toe/: WTTT_Board.cpp  WTTT_Board.h  WTTT_Gameplay.h  WTTT_Player.cpp  WTTT_Player.h  WTTT_Random.cpp  WTTT_Random.h
inverse/: ITTT_Board.h  ITTT_Gameplay.h  ITTT_Player.h  ITTT_Random.cpp  ITTT_Random.h
(+10 files in other folders)
